<resources>
    <string name="app_name">BloodDonationUI</string>
    <string name="log_in">Conectare</string>
    <string name="password">Parola</string>
    <string name="name">Nume</string>
    <string name="email">E-mail</string>
    <string name="retype_password">Reintroduceți parola</string>
    <string name="age">Vârsta</string>
    <string name="cnp">CNP</string>
    <string name="select_sex">Selectați sexul</string>
    <string name="select_blood_group">Selectați grupa de sânge</string>
    <string name="register">Înregistrare</string>
    <string name="not_a_member_click_here_to_sign_up">Nu aveți cont? Apăsați <b>aici</b> pentru a vă înregistra.</string>
    <string name="donor_form">Chestionarul donatorului</string>
    <string name="log_out">Deconectare</string>
    <string name="donation_info">Donation Info</string>
    <string name="appointment">Programare</string>
    <string name="donor_profile">Profilul donatorului</string>
    <string name="select_appointment_time">Selectează ora programării:</string>
    <string name="_8">8</string>
    <string name="_00">00</string>
    <string name="make_appointment">Creează o programare</string>
    <string name="scan_qr_code">Scanați codul QR.</string>
    <string name="donor_name">Numele donatorului:</string>
    <string name="blood_group">Grupa de sânge</string>
    <string name="log_in_admin">admin</string>
    <string name="sex">Sexul</string>
    <string name="blood_group_">Grupa de sânge:</string>
    <string name="first_name">Prenume</string>
    <string name="last_name">Nume</string>
    <string name="qr_code">Cod QR</string>
    <string name="app_name2">LifeShare</string>
    <string name="e_mail">E-mail</string>

</resources>