<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="cg.example.blooddonationfrontend.view.RegisterActivity">

    <EditText
        android:id="@+id/registerNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#6EFF215D"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/registerEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerNameInput"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#6EFF215D"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/registerPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerEmailInput"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:background="#6EFF215D" />

    <EditText
        android:id="@+id/registerPasswordRetype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/registerPasswordInput"
        android:hint="@string/retype_password"
        android:textSize="20sp"
        android:textColorHint="@color/black"
        android:background="#6EFF215D" />

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerPasswordRetype"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#6EFF215D"
        android:hint="@string/age"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/cnpInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ageInput"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#6EFF215D"
        android:hint="@string/cnp"
        android:textColorHint="@color/black"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/sexInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cnpInput"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        android:background="#6EFF215D"
        android:gravity="center_horizontal"
        android:minHeight="48dp"
        android:text="@string/select_sex"
        android:textAlignment="gravity"
        android:textColor="#000000" />


    <TextView
        android:id="@+id/bloodGroupInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sexInput"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#6EFF215D"
        android:dropDownSelector="@drawable/emailimg"
        android:hint="Blood group:"
        android:spinnerMode="dropdown"
        android:visibility="visible" />

</RelativeLayout>