<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".view.AppointmentActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="20dp"
        android:background="@drawable/gradient_drawable2">

        <LinearLayout
            android:id="@+id/spinnerLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/white_back"
                android:scaleType="fitXY"
                android:src="@drawable/white_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>


        <ImageView
            android:id="@+id/imageappointment"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/appointmentwhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageappointment"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/select_appointment_time"
            android:textColor="@color/white"
            android:textSize="26sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/hourSpinner"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginTop="200dp"
            android:layout_weight="1"
            android:background="@drawable/emailimg"
            android:hint="@string/_8"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/minuteSpinner"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="200dp"
            android:layout_weight="1"
            android:background="@drawable/emailimg"
            android:hint="@string/_00"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/makeAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginTop="-81dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#FF215D"
        android:gravity="center"
        android:text="@string/make_appointment"
        android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>